[b]Version 0.6.10[/b]:

(2010-02-25)
 * Possibility to sort the items of the playlist. Implemented by 
   Neo254 <manuel.ohrndorf@gmx.net> 
   http://smplayer.berlios.de/forum/viewtopic.php?p=423#p423


[b]Version 0.6.9[/b]:

(2010-02-18)
 * New option for smplayer.ini: relative_seeking (section [gui]). If true
   seeking (with the time slider) will be done by using a percentage. If false
   seeking will be done using an absolute time. The default value for this
   option is true.

(2010-02-09)
 * Fix: using now -af channels to select the left or right audio channel, as 
   it seems the -stereo option in mplayer doesn't work as expected.
   Should fix bug #1962349.

(2010-02-02)
 * Added a new action to toggle deinterlacing (assigned to key D). It just 
   runs the mplayer slave command "step_property deinterlace". It toggles 
   deinterlacing on/off. Requires the yadif or kerndeint filters.
   Note: when using this action, the deinterlace menu is not updated.

(2010-02-01)
 * Added an option (Options -> Statusbar) to display the video resolution and
   fps in the statusbar.
 * For consistency, moved the option to show the frame counter to the submenu
   Options -> Statusbar. (Which by the way required to remove the old and ugly
   implementation and create a new one)

(2010-01-28)
 * (Experimental) Now the slider seeks again by percentage instead of time, but
   this time the percentage uses fractions so it should be as accurate as
   before, and makes seeking work better when the length reported by mplayer is
   wrong.

(2010-01-20)
 * Now the command line options -close-at-end and -no-close-at-end don't
   modify the preference's option "close when finished playback".
 * Now the command line options -fullscreen and -no-fullscreen don't
   modify the preference's option "start videos in fullscreen".

(2010-01-15)
 * (Linux) Use pulse as default audio output instead of alsa, as alsa is
   causing problems (at least) in Ubuntu 9.10 when seeking on a video (image